using File.readString instead of Files.readAllBytes